<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <GVL Name="GVL" Id="{99ebb5cf-3301-4ba1-9750-fc35952219a6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	I:					ST_Input;// 输入信号
	Q:					ST_Output;// 输出信号
	stSetting:			ST_Setting;// 参数设置

	stShield_I:			ARRAY[0..7,0..15] OF  BOOL;;// 输入屏蔽
	stShield_Q:			ARRAY[0..6,0..15] OF  BOOL;//输出屏蔽

	arrFbLine:			ARRAY[0..10] OF FB_LineAxis;// 流线控制
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>